protocols/tests/adders/adder_d0/illegal_observation_assertion.out
error: Output 'DUT.s' depends on input(s) 'DUT.b' which do not have assigned values
   ┌─ adders/adder_d0/add_d0.prot:22:3
   │
22 │   DUT.b := X;
   │   ^^^^^^^^^^^ 'DUT.b' assigned DontCare here
   ·
25 │   assert_eq(DUT.s, s); // this should be illegal
   │             ^^^^^ Output 'DUT.s' depends on input(s) 'DUT.b' which do not have assigned values

